<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryLight"
    app:cardCornerRadius="25dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="enter your name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etHouseNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/house_number"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etColony"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/colony_street"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etLocality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/locality"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etMoblieNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/mobile_number"
            android:inputType="number" />

        <EditText
            android:id="@+id/etRequestTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/please_enter_estimate_delivery_date_and_time"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancelAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@android:color/holo_red_light"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/btnConfirmAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_dark"
                android:text="@string/confirm" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>