<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etOldPin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_old_pin"
        android:inputType="numberPassword"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etNewPin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_new_pin"
        android:inputType="numberPassword"
        android:textAlignment="center"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPinCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:background="@android:color/holo_red_light"
            android:text="@android:string/cancel"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnPinConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_light"
            android:text="@string/confirm"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>