<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.admin.AdminItemEdit">

    <ImageView
        android:id="@+id/ivEditImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        tools:srcCompat="@drawable/add_photo" />

    <EditText
        android:id="@+id/etEditName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:ems="10"
        android:hint="@string/enter_item_name"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etEditPrice"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:ems="10"
        android:hint="@string/enter_item_price"
        android:inputType="number"
        android:paddingStart="10dp"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/spinnerEditUnit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btnSumbitChange"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="2"
        android:background="@drawable/button_shape"
        android:onClick="submitChange"
        android:text="@string/submit_change"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

</LinearLayout>