<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvRetrieveName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:text="Name:Rishabh Rawat" />

        <TextView
            android:id="@+id/tvRetriveAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:text="Address:Seemadwar" />

        <TextView
            android:id="@+id/tvRetrievePhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:text="Phone:544545454" />

        <EditText
            android:id="@+id/etRequestedTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_estimate_delivery_date_and_time"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSelectIt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@android:color/holo_green_light"
                android:text="@string/select_it" />

            <Button
                android:id="@+id/btnAddNew"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_light"
                android:text="@string/add_new" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>